--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "restaurant-apps",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://nfathan.github.io/restaurant-apps-fathan/",
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "karma start",
-    "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build"
+    "test": "karma start"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
